Update environment variables and improve email invitation formatting

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,13 @@ DATABASE_URL=./messaging.db
 # Client Configuration
 # This should be the base URL where your application is served from
 # For local development: http://localhost:3000
-# For production: your Render service URL (e.g., https://your-app.onrender.com)
+# For production: your Render service URL (e.g., https://chat-easy-integrate.onrender.com)
 CLIENT_URL=http://localhost:3000
 SERVER_URL=http://localhost:3000
+
+# Production Example (uncomment for production):
+# CLIENT_URL=https://chat-easy-integrate.onrender.com
+# SERVER_URL=https://chat-easy-integrate.onrender.com
 
 # CORS Configuration
 # For production, you might want to restrict this to your domain
