--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
