--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,9 @@ temp/
 client/dist/
 client/build/
 
+# Server uploads (user-uploaded documents)
+server/uploads/
+
 # Package lock files (choose one based on your preference)
 # package-lock.json
 # yarn.lock
