--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
     "socket.io": "^4.7.2",
     "sqlite": "^5.1.1",
