Update environment example and server configuration to support invite email branding. Modify logo URL for local development and enhance static file serving for images in the server.

--- a/env.example
+++ b/env.example
@@ -12,6 +12,7 @@ SMTP_USER=your@gmail.com
 SMTP_PASS=your-16-char-app-password
 SMTP_FROM=Your Name <your@gmail.com>
 
-# Optional: invite email template
+# Optional: invite email template (logo is served at /images/nego.png from client/public/images/)
 # INVITE_EMAIL_APP_NAME=Nego
-# INVITE_EMAIL_LOGO_URL=https://yoursite.com/logo.png
+# INVITE_EMAIL_LOGO_URL=http://localhost:3000/images/nego.png
+# In production use your real origin, e.g. https://yoursite.com/images/nego.png
