Enhance application with Gemini API integration for AI responses and workflow management. Update environment configuration to include Gemini API key, and modify settings UI for API key management. Implement room metadata updates for assignment and lifecycle tracking. Introduce AI reply functionality using Gemini, along with document upload and URL fetching capabilities for workflow training. Refactor messaging components to support new features and improve user experience.

--- a/env.example
+++ b/env.example
@@ -2,6 +2,10 @@
 # Optional: server URL (used for invite links, etc.)
 # SERVER_URL=http://localhost:3000
 
+# Gemini API key (server-side only). Used for "Respond with AI" and workflow agents.
+# Get a key at https://aistudio.google.com/apikey
+# GEMINI_API_KEY=your-gemini-api-key
+
 # Email (invite & channels): the app reads .env and merges with Integrations UI config.
 # Use Gmail App Password (not your account password) if 2FA is on: https://support.google.com/accounts/answer/185833
 # Values in .env: surrounding double/single quotes are stripped (SMTP_PASS="mypass" is fine).
