--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "server:dev": "nodemon server/index.js",
     "client:dev": "cd client && npm run dev",
     "build": "cd client && npm run build",
+    "build:all": "npm run build && (fuser -k 3000/tcp 2>/dev/null; sleep 1; npm start)",
     "start": "node server/index.js",
     "install-all": "npm install && cd client && npm install"
   },
   "dependencies": {
+    "@google/genai": "^1.39.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
+    "pdf-parse": "^1.1.4",
     "socket.io": "^4.7.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
