Implement user authentication features including registration, login, and session management. Update database schema to support user data storage and enhance server API with authentication routes. Modify client components to handle user sessions and integrate authentication checks in messaging and room functionalities. Improve environment configuration for session management and client URL settings.

--- a/env.example
+++ b/env.example
@@ -6,6 +6,11 @@
 # Get a key at https://aistudio.google.com/apikey
 # GEMINI_API_KEY=your-gemini-api-key
 
+# Authentication & Session
+SESSION_SECRET=change-this-to-a-random-secret-in-production
+CLIENT_URL=http://localhost:5173
+NODE_ENV=development
+
 # Email (invite & channels): the app reads .env and merges with Integrations UI config.
 # Use Gmail App Password (not your account password) if 2FA is on: https://support.google.com/accounts/answer/185833
 # Values in .env: surrounding double/single quotes are stripped (SMTP_PASS="mypass" is fine).
