--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "@google/genai": "^1.39.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "express-session": "^1.19.0",
     "multer": "^2.0.2",
     "nodemailer": "^6.9.16",
     "pdf-parse": "^1.1.4",
