Integrate Africa's Talking SMS service and enhance chatbot functionality. Update environment configuration for SMS integration, including sandbox settings. Refactor SMS sending logic to prioritize Africa's Talking API, with fallback to generic gateway. Implement in-app help chatbot for user assistance, enhancing user experience with AI-driven replies. Update server API to support chatbot interactions and improve SMS configuration validation.

--- a/env.example
+++ b/env.example
@@ -21,6 +21,16 @@ SMTP_USER=your@gmail.com
 SMTP_PASS=your-16-char-app-password
 SMTP_FROM=Your Name <your@gmail.com>
 
+# SMS –# Sandbox: https://account.sandbox.africastalking.com – username MUST be "sandbox", use Sandbox API key
+ Africa's Talking (bulk SMS)
+# Live: https://account.africastalking.com – use your app username and Live API key
+AFRICASTALKING_USERNAME=sandbox
+AFRICASTALKING_API_KEY=your-sandbox-api-key
+# Sandbox for testing; set to false for production
+AFRICASTALKING_SANDBOX=true
+# Optional: registered sender ID (alphanumeric) for branded messages
+# AFRICASTALKING_SENDER_ID=YourBrand
+
 # Optional: invite email template (logo is served at /images/nego.png from client/public/images/)
 # INVITE_EMAIL_APP_NAME=Nego
 # INVITE_EMAIL_LOGO_URL=http://localhost:3000/images/nego.png
