--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ server/uploads/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+SECRETS_FOR_RENDER.txt
 DEPLOYMENT_CHECKLIST.md
 RENDER_DEPLOY_STEPS.md
