--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "server:dev": "nodemon server/index.js",
     "client:dev": "cd client && npm run dev",
-    "build": "cd client && npm install && npm run build",
+    "build": "npm run install:client && cd client && npm run build",
     "build:all": "npm run build && (fuser -k 3000/tcp 2>/dev/null; sleep 1; npm start)",
     "start": "node server/index.js",
-    "install-all": "npm install && cd client && npm install",
-    "postinstall": "cd client && npm install"
+    "install:client": "cd client && npm ci --prefer-offline || npm install",
+    "install-all": "npm install && npm run install:client"
   },
   "dependencies": {
     "@google/genai": "^1.39.0",
