--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     region: oregon
     plan: starter
     branch: main
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm run install:client && npm run build
     startCommand: npm start
     healthCheckPath: /api/health
     envVars:
