--- a/render.yaml
+++ b/render.yaml
@@ -12,6 +12,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: NPM_CONFIG_INCLUDE
+        value: dev
       - key: PORT
         value: 3000
       - key: SESSION_SECRET
